@@ -2,7 +2,7 @@
 Install Instructions for VIT
 ----------------------------
 
-## confugre the Makefile...
+## configure the Makefile...
 ./configure
 
 ## build the script...
