@@ -12,3 +12,4 @@ for more details.
 You should have received a copy of the GNU General Public License along
 with Vit.  If not, see <http://www.gnu.org/licenses/>.
 
+Copyright 2012 - 2013, Steve Rader
