@@ -1,3 +1,4 @@
+ Sun Jun 23 2013 - added Copyright 2012 - 2013, Steve Rader
 
  Wed Apr  3 2013 - released v1.1
  Wed Apr  3 2013 - fixes for not having color=on set in ~/.taskrc
